[package]
name = "octotrack"
version = "0.1.0"
edition = "2024"
authors = ["Michal-python"]

[dependencies]
clap = "4.5.23"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.134"
chrono = "0.4.39"
colored = "2.2.0"
kuchiki = "0.8.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
